--- a/package.json
+++ b/package.json
@@ -13,6 +13,24 @@
     "type": "git",
     "url": "git+https://github.com/actions/javascript-action.git"
   },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es6": true,
+      "jest": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "prettier"
+    ],
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true
+  },
   "keywords": [
     "GitHub",
     "Actions",
@@ -25,11 +43,16 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.9.1",
+    "@actions/github": "^5.0.3",
+    "@actions/http-client": "^2.0.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1"
   }
 }
