--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
   },
   "eslintConfig": {
     "env": {
-      "node": true,
+      "commonjs": true,
       "es6": true,
-      "jest": true
+      "jest": true,
+      "node": true
     },
     "extends": [
       "eslint:recommended",
       "prettier"
     ],
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
     "parserOptions": {
       "ecmaVersion": "latest"
     }
