--- a/.github/workflows/create-work-note.yml
+++ b/.github/workflows/create-work-note.yml
@@ -26,10 +26,11 @@ jobs:
   post-work-note:
     name: Audit deployment
     if: github.ref == 'refs/heads/main'
+    needs: [deploy-prod]
     environment:
       name: prod
     runs-on: ubuntu-latest
 
     steps:
       - name: Create deployment notification
-        uses: ugrc/service-now-worknote-action@HEAD
+        uses: agrc/service-now-worknote-action@HEAD
