--- a/.github/workflows/create-work-note.yml
+++ b/.github/workflows/create-work-note.yml
@@ -23,14 +23,9 @@ jobs:
       - name: Deploy
         run: echo deploy!
 
-  post-work-note:
-    name: Audit deployment
-    if: github.ref == 'refs/heads/main'
-    needs: [deploy-prod]
-    environment:
-      name: prod
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Create deployment notification
         uses: agrc/service-now-worknote-action@HEAD
+        with:
+          username: ${{ secrets.SN_USERNAME }}
+          password: ${{ secrets.SN_PASSWORD }}
+          system-id: ${{ secrets.SN_SYS_ID }}
