ci: use main instead of head
the logs aren't updating

--- a/.github/workflows/create-work-note.yml
+++ b/.github/workflows/create-work-note.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo deploy!
 
       - name: Create deployment notification
-        uses: agrc/service-now-worknote-action@HEAD
+        uses: agrc/service-now-worknote-action@main
         with:
           username: ${{ secrets.SN_USERNAME }}
           password: ${{ secrets.SN_PASSWORD }}
