--- a/.github/workflows/create-work-note.yml
+++ b/.github/workflows/create-work-note.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo deploy!
 
       - name: Create deployment notification
-        uses: agrc/service-now-worknote-action@main
+        uses: agrc/service-now-worknote-action@v1
         with:
           username: ${{ secrets.SN_USERNAME }}
           password: ${{ secrets.SN_PASSWORD }}
