ci: remove matrix of 1

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: '24 5 * * 6'
+    - cron: '0 12 * * 1'
 
 jobs:
   analyze:
@@ -17,23 +17,18 @@ jobs:
       contents: read
       security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['javascript']
-
     steps:
-      - name: Checkout repository
+      - name: ⬇️ Set up code
         uses: actions/checkout@v3
 
-      - name: Initialize CodeQL
+      - name: 🚦 Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: ${{ matrix.language }}
+          languages: javascript
           config-file: ./.github/codeql/codeql-config.yml
 
-      - name: Autobuild
+      - name: 🏗️ Autobuild
         uses: github/codeql-action/autobuild@v2
 
-      - name: Perform CodeQL Analysis
+      - name: 🧪 Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
