--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,6 @@ inputs:
   repo-token:
     description: 'the github token for the runner'
     required: true
-    default: '${{ github.token }}'
   username:
     description: 'the username of the credentials with REST API access for basic authentication'
     required: true
@@ -12,13 +11,11 @@ inputs:
     description: 'the password of the credentials with REST API access for basic authentication'
     required: true
   instance-name:
-    description: 'the instance name for the service now url implementation'
+    description: 'the sub address to `https://{SN_INSTANCE}.service-now.com`'
     required: true
-    default: 'utahdev3'
   table-name:
     description: 'the table name that contains the system id item to update'
     required: true
-    default: 'cmdb_ci_business_app'
   system-id:
     description: 'the specific sys-id (row) item to write a work note for'
     required: true
