fix: add expected input

--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,9 @@ inputs:
   system-id:
     description: 'the specific sys-id (row) item to write a work note for'
     required: true
+  check-approvals:
+    description: 'default: true, false skips approvals'
+    required: false
 runs:
   using: 'node16'
   main: 'dist/index.js'
