--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,12 @@ inputs:
   system-id:
     description: 'the specific sys-id (row) item to write a work note for'
     required: true
+  check-approvals:
+    description: 'a boolean value to control whether to check for approvals, default: true, false skips approvals'
+    required: false
+  environment:
+    description: 'the environment being deployed to'
+    required: false  
 runs:
   using: 'node16'
   main: 'dist/index.js'
